<resources>
    <string name="app_name">Time Manager</string>
    <string-array name="priority">
        <item>Urgent_and_important</item>
        <item>Urgent_and_not_important</item>
        <item>Not_urgent_and_important</item>
        <item>Not_urgent_and_not_important</item>
    </string-array>
    <string name="title_activity_main">Time Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_task">Create Task</string>
    <string name="tmq_short_planing_title">Short-Range Planning</string>
    <string name="tmq_title">Time Attitudes</string>
    <string name="tmq_title_long">Long-Range Planning</string>
    <string name="tmq_score_text">Your TMQ Score:</string>
    <string name="q1">1. Do you make a list of the things you have to do each day?</string>
    <string name="q2">2. Do you plan your day before  you start it?</string>
    <string name="q3">3. Do you  make a schedule of the activities you have to do on work days?</string>
    <string name="q4">4. Do you write a set of goals for  yourself for  each day?</string>
    <string name="q5">5. Do you  spend time each day  planning?</string>
    <string name="q6">6. Do you have a clear idea of what  you want to accomplish during the next week?</string>
    <string name="q7">7. Do you set and honor priorities?</string>
    <string name="q8">8. Do you often find yourself doing things which interfere with your schoolwork  simply because you hate to  say "No" to people?</string>
    <string name="q9">9. Do you feel you are in charge of your own time, by and large?</string>
    <string name="q10">10. On an  average class day do you spend more time with personal grooming than  doing schoolwork?*</string>

    <string name="q11">11. Do you believe that there is room  for improvement  in the way you  manage your time?
 *</string>
    <string name="q12">12. Do you make constructive use of your time?</string>
    <string name="q13">13. Do you continue unprofitable  routines or activities?</string>
    <string name="q14">14. Do you usually keep you desk clear  of everything other than  what you are currently working on?</string>
    <string name="q15">15. Do you have a set of goals for the entire quarter?</string>
    <string name="q16">16. The night  before  a major  assignment  is due, are you usually still working on  it</string>
    <string name="q17">17. When  you have several things to do, do you think  it is best to do a little bit of work on  each one?</string>
    <string name="q18">18.   Do you  regularly  review your class notes, even when a test  is not imminent?</string>
    <string name="rb_never">never</string>
    <string name="rb_seldom">seldom</string>
    <string name="rb_sometimes">sometimes</string>
    <string name="rb_often">often</string>
    <string name="rb_always">always</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="tmq">Time Management Questionnaire</string>
    <string name="tmq_start_text">Go through this questionnaire to find out how effective you are in managing your time.
 The questionnaire includes 18 questions compiled by Britton and Tesser.
        Each question can be given points from 1 to 5. That means answers based on the following 5-point Likert scale (1=Never, 2=Infrequently,
3=Sometimes, 4=Frequently, and 5=Always)</string>


    <string name="abouttm1">Time Management refers to managing time effectively so that the right time is allocated to the right activity. </string>
    <string name="abouttm2">Effective time management allows individuals to assign specific time slots to activities as per their importance.  </string>
    <string name="abouttm3">Time Management refers to making the best use of time as time is always limited. </string>

    <string name="abouttm4">Ask yourself which activity is more important and how much time should be allocated to the same? Know which work should be done earlier and which can be done a little later. </string>
    <string name="abouttm5">Time Management plays a very important role not only in organizations but also in our personal lives.  </string>
<string name="abouttm6">Plan your day well in advance. Prepare a To Do List or a “TASK PLAN”. Jot down the important activities that need to be done in a single day against the time that should be allocated to each activity. High Priority work should come on top followed by those which do not need much of your importance at the moment. Complete pending tasks one by one. Do not begin fresh work unless you have finished your previous task. Tick the ones you have already completed. Ensure you finish the tasks within the stipulated time frame.</string>
<string name="abouttm7">Working without goals and targets in an organization would be similar to a situation where the captain of the ship loses his way in the sea. Yes, you would be lost. Set targets for yourself and make sure they are realistic ones and achievable.
</string>
<string name="abouttm8">Set deadlines for yourself and strive hard to complete tasks ahead of the deadlines. Do not wait for your superiors to ask you everytime. Learn to take ownership of work. One person who can best set the deadlines is you yourself. Ask yourself how much time needs to be devoted to a particular task and for how many days. Use a planner to mark the important dates against the set deadlines.</string>


<string name="abouttm9">Learn to say “NO” at workplace. Don’t do everything on your own. There are other people as well. One should not accept something which he knows is difficult for him. The roles and responsibilities must be delegated as per interest and specialization of employees for them to finish tasks within deadlines. A person who does not have knowledge about something needs more time than someone who knows the work well.</string>
<string name="abouttm10">Prioritize the tasks as per their importance and urgency. Know the difference between important and urgent work. Identify which tasks should be done within a day, which all should be done within a month and so on. Tasks which are most important should be done earlier.</string>

<string name="abouttm11">Develop the habit of doing the right thing at the right time. Work done at the wrong time is not of much use. Don’t waste a complete day on something which can be done in an hour or so. Also keep some time separate for your personal calls or checking updates on Facebook or Twitter. After all human being is not a machine.</string>

    <string name="tm1_res1"><a href="https://www.researchgate.net/profile/Abraham_Tesser/publication/232573913_Effects_of_Time-Management_Practices_on_College_Grades/links/0046353545613de89d000000/Effects-of-Time-Management-Practices-on-College-Grades.pdf"></a>Britton, B.K. and Tesser, A. (1991):"Effects of time-management practiceson college grades", Journal of Educational Psychology, Vol. 83, pp. 405-410.</string>
</resources>
