<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="135dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="28dp"
                android:text="What is Time Management?"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm1"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm2"
                android:textStyle="italic" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="20dp"
                android:paddingRight="10dp"
                android:textStyle="italic"
                android:text="@string/abouttm3" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm5" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="0dp"
                android:paddingRight="10dp"
                android:text="Time Management includes:" />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="1. Effective Planning
   2. Setting goals and objectives
   3. Setting deadlines
   4. Delegation of responsibilities
   5. Prioritizing activities as per their importance
   6. Spending the right time on the right activity " />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Effective Planning"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="12dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm6" />
            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Setting Goals and Objectives"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm7" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Setting Deadlines"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:textStyle="bold"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm8" />


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Delegation of Responsibilities"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:textStyle="bold"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm9" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Prioritizing Tasks"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:textStyle="bold"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm10" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Spending the right time on right activity"
                android:textSize="18sp"
                android:paddingBottom="10dp"
                android:textStyle="bold"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingBottom="20dp"
                android:paddingRight="10dp"
                android:text="@string/abouttm11" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text="Related Reading:"/>


            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:paddingLeft="5dp"
                android:text="https://www.researchgate.net/profile/Abraham_Tesser/publication/232573913_Effects_of_Time-Management_Practices_on_College_Grades/links/0046353545613de89d000000/Effects-of-Time-Management-Practices-on-College-Grades.pdf" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>